gateway/src/main/resources/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: caj-gateway
  labels:
    app: caj-gateway
    service: caj-gateway
spec:
  selector:
    app: caj-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
